sampler/chain/projects/lottie-android/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/animation/content/PolystarContent.java:82: error: [NullAway] (INDEX= 144) read of @NonNull field innerRadiusAnimation before initialization
      innerRadiusAnimation.addUpdateListener(this);
      ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/animation/content/PolystarContent.java:63: error: [NullAway] (INDEX= 141) (Covered) assigning @Nullable expression to @NonNull field
      innerRoundednessAnimation = null;
                                ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/LottieDrawable.java:326: error: [NullAway] (INDEX= 14) (Covered) assigning @Nullable expression to @NonNull field
    composition = null;
                ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/LottieAnimationView.java:137: error: [NullAway] (INDEX= 72) (Covered) initializer method does not guarantee @NonNull fields failureListener (line 98), animationName (line 103), compositionTask (line 123), composition (line 125) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public LottieAnimationView(Context context, AttributeSet attrs, int defStyleAttr) {
         ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/model/layer/CompositionLayer.java:47: error: [NullAway] (INDEX= 67) (Covered) assigning @Nullable expression to @NonNull field
      this.timeRemapping = null;
                         ^
	(see http://t.uber.com/nullaway )
